@startuml
skinparam defaultFontName "Segoe UI"
skinparam titleFontName "Segoe UI"
skinparam defaultFontSize 14
skinparam titleFontSize 20
hide circle
skinparam shadowing false
title ERD - Xác thực và người dùng

entity "NguoiDung" as User {
  * _id : ObjectId <<PK>>
  --
  email : String <<UNIQUE>>
  matKhau : String
  hoTen : String
  soDienThoai : String
  vaiTro : Enum
  trangThai : Enum
  maDatLaiMatKhauHash : String
  maDatLaiMatKhauHetHan : Date
  ngayTao : Date
  ngayCapNhat : Date
}

entity "UngVien" as Candidate {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
  anhDaiDien : String
  tomTat : String
  kinhNghiem : Number
}

entity "NhaTuyenDung" as Employer {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
  tenCongTy : String
  trangThaiDuyet : Enum
  lyDoTuChoi : String
}

entity "ThongBao" as Notification {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
  loai : Enum
  tieuDe : String
  noiDung : String
  lienKet : String
  daDoc : Boolean
}

User ||--o| Candidate : hồ sơ ứng viên
User ||--o| Employer : hồ sơ công ty
User ||--o{ Notification : nhận
@enduml
